--- a/src/main/resources/static/css/main.css
+++ b/src/main/resources/static/css/main.css
@@ -126,8 +126,7 @@ section .section-title {
 [ FONT ]*/
 
 hr { 
-   border-top: 2px solid #4bceb4; 
-   border-bottom: 2px solid #4bceb4; 
+   border-top: 2px solid #17e89b66; 
    border-left:none; 
    border-right:none; 
    height: 6px; 
